dmz/searxng/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`searxng.durp.info`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: searxng-service
          port: 8080
  tls:
    secretName: searxng-tls

---

kind: Service
apiVersion: v1
metadata:
  name: searxng-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: searxng.durp.info
spec:
  type: ExternalName
  externalName: durp.info

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng-internal-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`searxng.internal.durp.info`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: searxng-service
          port: 8080
  tls:
    secretName: searxng-internal-tls
